Add New Section

--- a/Home.html
+++ b/Home.html
@@ -134,7 +134,7 @@
                     </div>
 
 
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all">
                         <div class="products" data-id="1">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-1.jpg" alt=""></a>
                             <div class="name">
@@ -146,10 +146,16 @@
                             <div class="price-button">
                                 <p>$38.00</p>
                                 <button class="btn btn-success btn-sm">Add to cart</button>
+                                <!-- <button class="btn">
+                                    Add to Cart
+                                    <svg class="border-container">
+                                        <rect pathLength="100" class="border-line"></rect>
+                                    </svg>
+                                </button> -->
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all">
                         <div class="products" data-id="2">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-2.jpg" alt=""></a>
                             <div class="name">
@@ -164,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv bestsellers all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv bestsellers all">
                         <div class="products" data-id="3">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-3.jpg" alt=""></a>
                             <div class="name">
@@ -179,7 +185,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv history all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv history all">
                         <div class="products" data-id="4">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-4.jpg" alt=""></a>
                             <div class="name">
@@ -194,7 +200,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv bestsellers history all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv bestsellers history all">
                         <div class="products" data-id="5">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-5.jpg" alt=""></a>
                             <div class="name">
@@ -209,7 +215,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv art all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv art all">
                         <div class="products" data-id="6">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-6.jpg" alt=""></a>
                             <div class="name">
@@ -224,7 +230,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv art all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv art all">
                         <div class="products" data-id="7">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-7.jpg" alt=""></a>
                             <div class="name">
@@ -239,7 +245,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv bestsellers lovestories all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv bestsellers lovestories all">
                         <div class="products" data-id="8">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-8.jpg" alt=""></a>
                             <div class="name">
@@ -254,7 +260,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv lovestories all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv lovestories all">
                         <div class="products" data-id="9">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-9.jpg" alt=""></a>
                             <div class="name">
@@ -269,7 +275,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv all">
                         <div class="products" data-id="10">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-10.jpg" alt=""></a>
                             <div class="name">
@@ -284,7 +290,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all">
                         <div class="products" data-id="11">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-11.webp" alt=""></a>
                             <div class="name">
@@ -299,7 +305,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all">
                         <div class="products" data-id="2">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-12.png" alt=""></a>
                             <div class="name">
