--- a/Login.html
+++ b/Login.html
@@ -94,6 +94,7 @@
                 </div>
                 <div class="password-input">
                     <input type="password">
+                    <i class="fa-regular fa-eye eyes"></i>
                 </div>
                 <div class="remenber-login">
                     <div class="form-check">
