--- a/Register.html
+++ b/Register.html
@@ -80,7 +80,7 @@
         </section>
         <section id="register-form">
             <div class="container">
-                <div class="login">
+                <div class="register">
                     <h2>Register</h2>
                 </div>
                 <div class="first-name-label">
@@ -106,12 +106,14 @@
                 </div>
                 <div class="password-input">
                     <input type="password">
+                    <i class="fa-regular fa-eye eyes"></i>
                 </div>
                 <div class="confirm-password-label">
                     <label for="">Confirm Password *</label>
                 </div>
                 <div class="confirm-password-input">
                     <input type="password">
+                    <i class="fa-regular fa-eye eyes"></i>
                 </div>
                 <div class="register">
                     <div class="register-button">
