--- a/Shop.html
+++ b/Shop.html
@@ -324,33 +324,41 @@
                             <div class="search">
                                 <input type="text" placeholder="Search">
                             </div>
-                            <div class="filter">
-                                <h5>Filter by price</h5>
-                            </div>
-                            
-                            <div class="product-price mt-3">
+
+                            <div class="product-price mt-5">
+                                <div class="price-title">
+                                    <h3>FILTER BY PRICE</h3>
+                                </div>
                                 <div class="price-filter">
                                     <div class="card">
+
+
+                                        <div class="range-slider">
+                                            <input type="range" class="min-price" value="100" min="10" max="500"
+                                                step="10" style="accent-color: #d8d8d8;">
+                                            <input type="range" class="max-price" value="250" min="10" max="500"
+                                                step="10" style="accent-color: #d8d8d8;">
+                                        </div>
                                         <div class="price-content">
+
+                                            <div style="color: gray;">
+                                                <p>Price:</p>
+                                            </div>
                                             <div>
-                                                <label>Min</label>
                                                 <p id="min-value">50</p>
                                             </div>
 
                                             <div>
-                                                <label>Max</label>
                                                 <p id="max-value">500</p>
                                             </div>
-                                        </div>
-
-                                        <div class="range-slider">
-                                            <input type="range" class="min-price" value="100" min="10" max="500"
-                                                step="10">
-                                            <input type="range" class="max-price" value="250" min="10" max="500"
-                                                step="10">
+                                            <div class="filter-button">
+                                                <button>FILTER</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+
+
                             </div>
 
                             <div class="borders">
