Add New Section

--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -249,7 +249,14 @@
                 </div>
                 <div class="user-comment filterDiv reviews d-none">
                     <p>Leave a comment</p>
-                    <input type="text" placeholder="Your Name">
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <input class="mt-4" type="text" placeholder="Your Name">
                     <input type="email" placeholder="Your Email" class="mt-3">
                     <input type="text" placeholder="Subject" class="mt-3">
                     <textarea name="" id="" cols="30" rows="10" class="mt-3" placeholder="Your Review"></textarea>
