--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <section id="navbar">
+        <section id="navbar" class="d-lg-block d-none">
             <div class="container">
                 <div class="row">
                     <div class="col-6">
@@ -73,6 +73,33 @@
                 </div>
             </div>
         </section>
+        <section id="navbar-phone" class="d-lg-none d-block">
+            <div class="container">
+                <div class="nav">
+                    <div class="logo-img">
+                        <img src="./assets/images/home/book-logo-5.png" alt="">
+                    </div>
+                    <div class="icons">
+                        <ul>
+                            <li><a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                            <li><a href="Login.html"><i class="fa-solid fa-user"></i></a></li>
+                            <li><a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a></li>
+                            <li><i class="fa-solid fa-magnifying-glass search"></i></li>
+                        </ul>
+                    </div>
+                    <div class="hamburger-icon">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                    
+                </div>
+                <div class="search-input d-none">
+                    <div class="border"></div>
+                    <input type="text" placeholder="Search">
+                    <div class="border"></div>
+                </div>
+            </div>
+        </section>
+        <div class="border mt-3 d-lg-none d-block"></div>
     </header>
     <main>
         <section id="slider">
