--- a/Home.html
+++ b/Home.html
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="nav">
                     <div class="logo-img">
-                        <img src="./assets/images/home/book-logo-5.png" alt="">
+                        <a href="#"><img src="./assets/images/home/book-logo-5.png" alt=""></a>
                     </div>
                     <div class="icons">
                         <ul>
@@ -90,12 +90,22 @@
                     <div class="hamburger-icon">
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                    
+
                 </div>
-                <div class="search-input d-none">
+                <div class="search-input d-none mt-2">
                     <div class="border"></div>
                     <input type="text" placeholder="Search">
                     <div class="border"></div>
+                </div>
+                <div class="hamburger-menu d-none">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="About.html">About</a></li>
+                        <li><a href="Shop.html">Shop</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
+                        <li><a href="Blog.html">Blog</a></li>
+
+                    </ul>
                 </div>
             </div>
         </section>
@@ -112,7 +122,7 @@
                             <h1>We love literature</h1>
                             <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil pariatur facere deserunt
                                 consequatur.</h3>
-                            <button class=" shop">READ MORE</button>
+                            <button class="shop">READ MORE</button>
                         </div>
                         <div class="swiper-slide">
                             <img src="./assets/images/home/slider-image-2.jpg" alt="">
@@ -390,7 +400,7 @@
 
                     </div>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="author">
                                 <div class="image">
                                     <img src="./assets/images/home/author-1.png" alt="">
@@ -407,7 +417,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="author">
                                 <div class="image">
                                     <img src="./assets/images/home/author-2.png" alt="">
@@ -424,7 +434,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="author">
                                 <div class="image">
                                     <img src="./assets/images/home/author-3.png" alt="">
@@ -441,7 +451,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="author">
                                 <div class="image">
                                     <img src="./assets/images/home/author-4.png" alt="">
@@ -608,22 +618,22 @@
         <section id="brand">
             <div class="container">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-1.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-2.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-3.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-4.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-5.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-6.png" alt="">
                     </div>
                 </div>
@@ -633,9 +643,9 @@
     </main>
     <footer>
         <section id="footer">
-            <div class="container">
+            <div class="container footer-background-color">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="left1">
                             <h4>Publishers</h4>
                             <div class="story">
@@ -647,7 +657,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="left2">
                             <h4>Contact</h4>
                             <div class="story">
@@ -667,7 +677,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="left3">
                             <h4>News & Update</h4>
                             <div class="story">
@@ -679,11 +689,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="right">
                             <h4>Social media</h4>
                             <div class="story">
-                                <div class="col-4">
+                                <div class="col-lg-4 col-md-6 col-sm-12">
                                     <div class="images1">
                                         <img src="./assets/images/home/footer-image-1.jpg" alt="">
                                         <img src="./assets/images/home/footer-image-2.jpg" alt="">
@@ -721,7 +731,6 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/home.js"></script>
-    <script src="./assets/js/custom.js"></script>
     <script src="./assets/js/common.js"></script>
 </body>
 
