Add New Section

--- a/Blog.html
+++ b/Blog.html
@@ -118,7 +118,7 @@
         <section id="blog">
             <div class="container">
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-lg-8 col-sm-12">
                         <div class="section-1">
                             <div class="image-1">
                                 <a href="BlogDetail.html"><img src="./assets/images/blog/blog-image-1.jpg" alt=""></a>
@@ -211,7 +211,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12">
                         <div class="section-6">
                             <div class="image">
                                 <img src="./assets/images/blog/author.png" alt="">
