--- a/Contact.html
+++ b/Contact.html
@@ -118,7 +118,7 @@
         <section id="contact">
             <div class="container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="name">
                             <h4>Bookstore Central</h4>
                         </div>
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="name">
                             <h4>Bookstore 1</h4>
                         </div>
@@ -176,7 +176,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="name">
                             <h4>Bookstore 2</h4>
                         </div>
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="name">
                             <h4>Publisher</h4>
                         </div>
@@ -240,22 +240,22 @@
         <section id="brand">
             <div class="container">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-1.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-2.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-3.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-4.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-5.png" alt="">
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12 brand">
                         <img src="./assets/images/home/brand-6.png" alt="">
                     </div>
                 </div>
