--- a/Shop.html
+++ b/Shop.html
@@ -118,7 +118,7 @@
         <section id="product-sidebar">
             <div class="container">
                 <div class="row">
-                    <div class="col-9">
+                    <div class="col-lg-9 col-sm-12">
                         <div class="results-sort">
                             <div class="results">
                                 <p>Showing 1–12 of 12 results</p>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-1.jpg"alt=""></a>
@@ -151,7 +151,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-2.jpg"
@@ -169,7 +169,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-3.jpg"
@@ -187,7 +187,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-4.jpg" alt=""><a
@@ -205,7 +205,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-5.jpg" alt=""></a>
@@ -222,7 +222,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-6.jpg" alt=""></a>
@@ -239,7 +239,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-7.jpg" alt=""></a>
@@ -256,7 +256,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-8.jpg" alt=""></a>
@@ -273,7 +273,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-9.jpg" alt=""></a>
@@ -290,7 +290,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-10.jpg" alt=""></a>
@@ -307,7 +307,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-11.jpg" alt=""></a>
@@ -324,7 +324,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-12.jpg" alt=""></a>
@@ -356,7 +356,7 @@
                         </div>
 
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="right-section">
                             <div class="search">
                                 <input type="text" placeholder="Search">
