--- a/BlogDetail.html
+++ b/BlogDetail.html
@@ -118,7 +118,7 @@
         <section id="blog-detail">
             <div class="container">
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-lg-8 col-sm-12">
                         <div class="details">
                             <div class="section-1">
                                 <div class="blog-image">
@@ -307,7 +307,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12">
                         <div class="section-5">
                             <div class="image">
                                 <img src="./assets/images/blog/author.png" alt="">
@@ -471,7 +471,6 @@
                         </div>
                     </div>
                 </div>
-                
             </div>
         </section>
     </main>
