--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -118,12 +118,12 @@
         <section id="detail">
             <div class="container">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12">
                         <div class="product-image">
                             <img src="./assets/images/product-detail/product-image.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-8">
+                    <div class="col-lg-8 col-sm-12">
                         <div class="section-1">
                             <div class="name">
                                 <p>BY JANE DOE</p>
@@ -314,7 +314,7 @@
                 <div class="border mt-4"></div>
 
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12">
                         <div class="related-products">
                             <div class="image">
                                 <img src="./assets/images/product-detail/related-product-1.jpg" alt="">
@@ -330,7 +330,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12">
                         <div class="related-products">
                             <div class="image">
                                 <img src="./assets/images/product-detail/related-product-2.jpg" alt="">
@@ -346,7 +346,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12">
                         <div class="related-products">
                             <div class="image">
                                 <img src="./assets/images/product-detail/related-product-3.jpg" alt="">
@@ -362,7 +362,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12">
                         <div class="related-products">
                             <div class="image">
                                 <img src="./assets/images/product-detail/related-product-4.jpg" alt="">
@@ -378,7 +378,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12">
                         <div class="related-products">
                             <div class="image">
                                 <img src="./assets/images/product-detail/related-product-5.jpg" alt="">
@@ -394,7 +394,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-6 col-sm-12">
                         <div class="related-products">
                             <div class="image">
                                 <img src="./assets/images/product-detail/related-product-6.jpg" alt="">
