Add New Section

--- a/Blog.html
+++ b/Blog.html
@@ -110,8 +110,8 @@
     </header>
     <main>
         <section id="background">
-            <div class="background-images"
-                style="background-image:url(./assets/images/login/login-backgorund-image.jpg)">
+            <div class="blog-background-images"
+                style="background-image:url(./assets/images/blog/blog-background.jpg)">
                 <h2>Blog</h2>
             </div>
         </section>
