--- a/BlogDetail.html
+++ b/BlogDetail.html
@@ -111,7 +111,7 @@
     <main>
         <section id="background">
             <div class="background-images"
-                style="background-image:url(./assets/images/forgot-password/forgot-password-backgorund-image.jpg)">
+                style="background-image:url(./assets/images/blog-detail/backgorund.jpeg)">
                 <h2>Blog Detail</h2>
             </div>
         </section>
