--- a/Cart.html
+++ b/Cart.html
@@ -114,7 +114,7 @@
                 <h2>Cart</h2>
             </div>
         </section>
-        <section id="products">
+        <section id="cart-products">
             <div class="container">
                 <div class="basket-products">
                     <table class="table">
