--- a/Login.html
+++ b/Login.html
@@ -110,7 +110,7 @@
     </header>
     <main>
         <section id="background">
-            <div class="background-images"
+            <div class="login-background-images"
                 style="background-image:url(./assets/images/login/login-backgorund-image.jpg)">
                 <h2>Login</h2>
             </div>
