--- a/Wishlist.html
+++ b/Wishlist.html
@@ -112,7 +112,7 @@
                 <h2>Wishlist</h2>
             </div>
         </section>
-        <section id="products">
+        <section id="wishlist-products">
 
             <div class="container">
                 <div class="wishlist-products">
