--- a/Home.html
+++ b/Home.html
@@ -394,6 +394,7 @@
 
                     </div>
                     <div class="row">
+
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="author">
                                 <div class="image">
@@ -547,7 +548,7 @@
                 </div>
             </div>
         </section>
-        <section id="images">
+        <section id="gallery">
             <div class="container">
                 <div class="row">
                     <div class="col-6">
